--- a/src/app/shared/warning-modal/warning-modal.component.html
+++ b/src/app/shared/warning-modal/warning-modal.component.html
@@ -3,7 +3,7 @@
     <fa-icon [icon]="['fas', 'exclamation-triangle']" [size]="'3x'" a11yRole="presentation"></fa-icon>
   </div>
   <h4 class="modal-title text-center">
-    {{ message | translate}}
+    {{ message | translate:parameters}}
   </h4>
   <hr/>
   <div class="row">
