fix race condition when loading languages

--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <div *ngIf="invoicingConfiguration.invoiceAllowed">
+      <div *ngIf="invoicingConfiguration?.invoiceAllowed">
         <app-invoice-form [form]="userForm" [invoicingConfiguration]="invoicingConfiguration"></app-invoice-form>
       </div>
 
