allow external users to delete their profile

--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-2" *ngIf="userForm">
+<div class="container mt-2" *ngIf="userForm && user">
   <form [formGroup]="userForm" (submit)="save()">
     <div class="application-container p-md-4">
       <app-topbar [contentLanguages]="languages"></app-topbar>
@@ -37,6 +37,17 @@
           </div>
         </div>
       </div>
+
+      <div class="border-top border-danger pt-5 delete-profile" *ngIf="user.external">
+        <h4 class="text-danger">{{ 'my-profile.delete-profile' | translate }}</h4>
+        <p class="text-muted">{{ 'my-profile.delete-profile.description' | translate }}</p>
+        <div class="row d-flex justify-content-end">
+          <div class="col-md-5 col-12 mt-2">
+            <button type="button" class="btn btn-block btn-danger" (click)="deleteProfile()">{{ 'my-profile.delete-profile' | translate }}</button>
+          </div>
+        </div>
+      </div>
+
     </div>
   </form>
 </div>
