--- a/src/app/my-orders/my-orders.component.html
+++ b/src/app/my-orders/my-orders.component.html
@@ -7,16 +7,17 @@
     </div>
 
     <div *ngFor="let order of orders" class="mt-5">
-      <h2>{{ localizedTitle(order) }}</h2>
-      <div class="row" class="mt-4">
+      <h2>{{ localizedTitle(order) }} <ng-container *ngIf="order.formattedStartDate"> - <small class="text-muted">{{order.formattedStartDate | translateDescription }}</small></ng-container></h2>
+      <div class="row mt-4">
         <table class="table table-hover">
           <caption class="sr-only" translate="my-orders.for-pc.description" [translateParams]="{'0': 'purchase-context.'+order.type | translate, '1': localizedTitle(order)}"></caption>
           <thead class="thead-dark">
             <tr>
-              <th class="text-center" translate="my-orders.id" width="20%"></th>
-              <th class="text-center" translate="my-orders.status" width="20%"></th>
-              <th class="text-center" translate="my-orders.confirmation-date" width="20%"></th>
-              <th class="text-align-right" translate="my-orders.total-amount" width="40%"></th>
+              <th class="text-center" translate="my-orders.id" style="width:10%"></th>
+              <th class="text-center" translate="my-orders.status" style="width:10%"></th>
+              <th class="text-center" translate="my-orders.confirmation-date" style="width: 20%"></th>
+              <th class="text-center" translate="my-orders.details"></th>
+              <th class="text-align-right" translate="my-orders.total-amount" style="width: 20%"></th>
             </tr>
           </thead>
           <tbody>
@@ -27,7 +28,15 @@
                 </a>
               </td>
               <td [ngClass]="getTextClass(reservation)" class="text-center"><fa-icon [icon]="getStatusIcon(reservation)" a11yRole="presentation" [title]="getStatusDescription(reservation) | translate"></fa-icon></td>
-              <td class="text-center">{{reservation.confirmedOn | date:'yyyy-MM-dd'}}</td>
+              <td class="text-center">{{reservation.formattedConfirmedOn | translateDescription }}</td>
+              <td>
+                <ul class="list-unstyled" *ngIf="reservation.items">
+                  <li *ngFor="let item of reservation.items">
+                    {{item.firstName}} {{item.lastName}}
+                    <ng-container *ngIf="order.type === 'event'"><i class="text-muted">({{item.type | translateDescription}})</i></ng-container>
+                  </li>
+                </ul>
+              </td>
               <td class="text-align-right">{{reservation.currencyCode}} {{reservation.finalPrice}}</td>
             </tr>
           </tbody>
