--- a/src/app/shared/topbar/top-bar.component.html
+++ b/src/app/shared/topbar/top-bar.component.html
@@ -7,7 +7,7 @@
         <fa-icon [icon]="['fas', 'user-astronaut']" aria-hidden="true" [title]="'user.menu.title' | translate"></fa-icon> {{user?.firstName}} {{user?.lastName}}
     </div>
     <div ngbDropdown *ngIf="user && displayLoginButton">
-      <button class="btn btn-link text-muted" id="userDropdown" ngbDropdownToggle>
+      <button type="button" class="btn btn-link text-muted" id="userDropdown" ngbDropdownToggle>
         <fa-icon [icon]="['fas', 'user-astronaut']" aria-hidden="true" [title]="'user.menu.title' | translate"></fa-icon> {{user?.firstName}} {{user?.lastName}}
       </button>
       <div ngbDropdownMenu aria-labelledby="userDropdown">
