hide additional data section if the user does not have additional data

--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -26,7 +26,7 @@
         <app-invoice-form [form]="userForm" [invoicingConfiguration]="invoicingConfiguration"></app-invoice-form>
       </div>
 
-      <div *ngIf="additionalData" formGroupName="additionalInfo">
+      <div *ngIf="hasAdditionalData" formGroupName="additionalInfo">
         <div class="page-header">
           <h2 translate="my-profile.additional-info"></h2>
         </div>
