display reservation cost or free

--- a/src/app/my-orders/my-orders.component.html
+++ b/src/app/my-orders/my-orders.component.html
@@ -37,7 +37,7 @@
                   </li>
                 </ul>
               </td>
-              <td class="text-align-right">{{reservation.currencyCode}} {{reservation.finalPrice}}</td>
+              <td class="text-align-right">{{getReservationCost(reservation)}}</td>
             </tr>
           </tbody>
         </table>
