--- a/src/app/reservation/summary-table/summary-table.component.html
+++ b/src/app/reservation/summary-table/summary-table.component.html
@@ -8,7 +8,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let summaryRow of reservationInfo.orderSummary.summary">
+    <tr *ngFor="let summaryRow of reservationInfo.orderSummary.summary" [class.bg-light]="summaryRow.type === 'TAX_DETAIL'">
       <td>
         <span *ngIf="summaryRow.type === 'DYNAMIC_DISCOUNT'" translate="reservation.dynamic.discount.description"></span>
         <span *ngIf="summaryRow.type === 'APPLIED_SUBSCRIPTION'">
@@ -20,15 +20,18 @@
             </button>
           </span>
         </span>
-        <span *ngIf="summaryRow.type !== 'DYNAMIC_DISCOUNT' && summaryRow.type !== 'APPLIED_SUBSCRIPTION'">{{summaryRow.name}}</span>
+        <span *ngIf="summaryRow.type === 'TAX_DETAIL'">
+          {{'reservation-page.vat'|translate:{'0': summaryRow.taxPercentage, '1': ('common.vat' | translate)} }}
+        </span>
+        <span *ngIf="summaryRow.type !== 'DYNAMIC_DISCOUNT' && summaryRow.type !== 'APPLIED_SUBSCRIPTION' && summaryRow.type !== 'TAX_DETAIL' ">{{summaryRow.name}}</span>
       </td>
-      <td class="text-center">{{summaryRow.amount}}</td>
+      <td class="text-center"><ng-container *ngIf="summaryRow.type !== 'TAX_DETAIL'">{{summaryRow.amount}}</ng-container></td>
       <td class="text-right">{{summaryRow.price}}</td>
       <td class="text-right"><app-price-tag [purchaseContext]="purchaseContext" [formattedPrice]="summaryRow.subTotal"></app-price-tag></td>
     </tr>
   </tbody>
   <tfoot>
-      <tr *ngIf="!reservationInfo.orderSummary.free && reservationInfo.orderSummary.displayVat && !purchaseContext.vatIncluded">
+      <tr *ngIf="!reservationInfo.orderSummary.free && reservationInfo.orderSummary.displayVat && !purchaseContext.vatIncluded" class="bg-light">
           <td colspan="3">{{'reservation-page.vat'|translate:{'0': purchaseContext.vat, '1': ('common.vat' | translate)} }}</td>
           <td class="text-right"><app-price-tag [purchaseContext]="purchaseContext" [formattedPrice]="reservationInfo.orderSummary.totalVAT"></app-price-tag></td>
       </tr>
