fix "view all" button

--- a/src/app/event-list-all/event-list-all.component.html
+++ b/src/app/event-list-all/event-list-all.component.html
@@ -12,7 +12,7 @@
       <h3 translate="event-list.no-events"></h3>
     </div>
 
-    <hr class="mt-5" *ngIf="linksContainer.termsAndConditionsUrl || linksContainer.privacyPolicyUrl" />
+    <hr class="mt-5" *ngIf="linksContainer.termsAndConditionsUrl || linksContainer.privacyPolicyUrl">
     <app-footer-links [linksContainer]="linksContainer"></app-footer-links>
   </div>
 </div>
