--- a/src/app/basic-event-info/basic-event-info.component.html
+++ b/src/app/basic-event-info/basic-event-info.component.html
@@ -1,4 +1,4 @@
-<div class="card card-light event-card mt-3">
+<div class="card card-light home-card mt-3">
   <div class="card-header bg-white event-header">
     <img [src]="'/file/'+event.fileBlobId" class="mx-auto img-responsive" alt="" aria-hidden="true" role="presentation">
     <div class="h4 online-flag" *ngIf="isEventOnline"><span class="badge badge-secondary">{{'event.online.badge' | translate}}</span></div>
