--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
 
       <div class="row justify-content-center mb-3 mt-3">
         <div class="col-md-5" *ngFor="let event of events">
-          <app-basic-event-info [event]="event" class="event-card"></app-basic-event-info>
+          <app-basic-event-info [event]="event"></app-basic-event-info>
         </div>
       </div>
       <div *ngIf="displayViewAllEventsButton" class="text-center mt-5 mb-5">
@@ -22,12 +22,12 @@
 
     <hr *ngIf="containsEvents && containsSubscriptions" class="mt-5 mb-5">
 
-    <div *ngIf="containsSubscriptions">
+    <div *ngIf="containsSubscriptions" class="mb-2">
       <h1 translate="subscription.title"></h1>
 
       <div class="row justify-content-center mb-3 mt-3">
         <div class="col-md-5" *ngFor="let subscription of subscriptions">
-          <app-basic-subscription-info [subscription]="subscription" class="card card-light event-card"></app-basic-subscription-info>
+          <app-basic-subscription-info [subscription]="subscription"></app-basic-subscription-info>
         </div>
       </div>
 
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <hr class="mt-5" *ngIf="linksContainer.termsAndConditionsUrl || linksContainer.privacyPolicyUrl" />
+    <hr class="mt-5" *ngIf="linksContainer.termsAndConditionsUrl || linksContainer.privacyPolicyUrl">
     <app-footer-links [linksContainer]="linksContainer"></app-footer-links>
   </div>
 </div>
