--- a/src/app/ticket-quantity-selector/ticket-quantity-selector.html
+++ b/src/app/ticket-quantity-selector/ticket-quantity-selector.html
@@ -2,7 +2,7 @@
   <ng-container *ngIf="category.saleableAndLimitNotReached">
     <label class="sr-only" [for]="'category-'+category.id+'-qty'" translate="show-event.category.quantity"></label>
     <select [id]="'category-'+category.id+'-qty'" formControlName="amount" class="custom-select" (change)="selectionChanged()">
-      <option *ngFor="let qty of quantityRange" [value]="qty">{{qty}}</option>
+      <option *ngFor="let qty of quantityRange" [ngValue]="qty">{{qty}}</option>
     </select>
   </ng-container>
   <span class="font-weight-bold" *ngIf="!category.saleableAndLimitNotReached && category.soldOutOrLimitReached" translate="show-event.sold-out"></span>
