--- a/src/app/event-footer-links/footer-links.component.html
+++ b/src/app/event-footer-links/footer-links.component.html
@@ -1,5 +1,5 @@
 <div class="mb-5 d-md-flex text-center text-md-left justify-content-md-center">
-  <div *ngIf="linksContainer.termsAndConditionsUrl"><a [href]="linksContainer.termsAndConditionsUrl" target="_blank" rel="noopener">{{'reservation-page.tc.link.text'|translate}}</a></div>
+  <div *ngIf="linksContainer.termsAndConditionsUrl"><a [href]="linksContainer.termsAndConditionsUrl" target="_blank" rel="noopener" aria-label="{{'reservation-page.tc.link.text'|translate}} {{'link.new-tab'|translate}}">{{'reservation-page.tc.link.text'|translate}}</a></div>
   <div class="ml-3 mr-3 d-none d-md-block" *ngIf="linksContainer.termsAndConditionsUrl && linksContainer.privacyPolicyUrl">&ndash;</div>
-  <div *ngIf="linksContainer.privacyPolicyUrl"><a [href]="linksContainer.privacyPolicyUrl" target="_blank" rel="noopener">{{'reservation-page.privacy.link.text'|translate}}</a></div>
+  <div *ngIf="linksContainer.privacyPolicyUrl"><a [href]="linksContainer.privacyPolicyUrl" target="_blank" rel="noopener" aria-label="{{'reservation-page.privacy.link.text'|translate}} {{'link.new-tab'|translate}}">{{'reservation-page.privacy.link.text'|translate}}</a></div>
 </div>
