--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -1,4 +1,4 @@
-<app-purchase-context-container>
+<app-purchase-context-container [purchaseContext]="purchaseContext" [displayFooterLinks]="displayFooterLinks">
   <div *ngIf="purchaseContext" class="add-margin-bottom">
       <header><app-purchase-context-header [purchaseContext]="purchaseContext" [type]="type"
                                            [displayTopLoginButton]="enableLoginButton"></app-purchase-context-header></header>
