--- a/src/app/subscription-display/subscription-display.component.html
+++ b/src/app/subscription-display/subscription-display.component.html
@@ -1,4 +1,4 @@
-<app-purchase-context-container>
+<app-purchase-context-container [purchaseContext]="subscription">
   <div *ngIf="subscription" class="add-margin-bottom">
     <header>
       <app-purchase-context-header [purchaseContext]="subscription" type="subscription"></app-purchase-context-header>
@@ -19,8 +19,6 @@
           </div>
 
           <hr class="mt-5">
-
-          <app-footer-links [linksContainer]="subscription"></app-footer-links>
 
           <div class="row d-flex justify-content-between mobile-add-margin-bottom">
             <div class="col-md-5 order-md-1 col-12"><button type="submit" *ngIf="subscription.numAvailable > 0" class="block-button btn btn-success" translate="show-event.continue"></button></div>
