--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -1,4 +1,4 @@
-<app-purchase-context-container>
+<app-purchase-context-container [purchaseContext]="event">
   <div *ngIf="event" class="add-margin-bottom">
     <header><app-purchase-context-header [purchaseContext]="event" type="event"></app-purchase-context-header></header>
     <main>
@@ -204,7 +204,6 @@
       <app-recaptcha [apiKey]="event.captchaConfiguration.recaptchaApiKey" (recaptchaResponse)="handleRecaptchaResponse($event)" *ngIf="event.captchaConfiguration.captchaForTicketSelection && event.captchaConfiguration.recaptchaApiKey"></app-recaptcha>
 
       <hr class="mt-5">
-      <app-footer-links [linksContainer]="event"></app-footer-links>
 
       <div class="row d-flex justify-content-between mobile-add-margin-bottom">
         <div class="col-md-5 order-md-1 col-12"><button type="submit" class="block-button btn btn-success" translate="show-event.continue"></button></div>
