--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -88,7 +88,7 @@
         </div>
 
         <div class="alert alert-success mt-2 mb-2 hidden alert-dismissible" role="alert" *ngIf="sendEmailForTicketStatus[ticket.uuid]">
-          <button type="button" class="close" (click)="sendEmailForTicketStatus[ticket.uuid] = false"><span aria-hidden="true">&times;</span><span class="sr-only" translate="reservation-page-complete.cancel"></span></button>
+          <button type="button" class="btn-close" (click)="sendEmailForTicketStatus[ticket.uuid] = false"><span class="sr-only" translate="reservation-page-complete.cancel"></span></button>
           <strong translate="email.ticket-email-sent"></strong>
         </div>
       </div>
