--- a/src/app/update-ticket/update-ticket.component.html
+++ b/src/app/update-ticket/update-ticket.component.html
@@ -58,7 +58,7 @@
               </div>
 
               <div class="alert alert-success mt-2 mb-2 hidden alert-dismissible" role="alert" *ngIf="emailSent">
-                <button type="button" class="close" (click)="emailSent = false"><span aria-hidden="true">&times;</span><span class="sr-only" translate="reservation-page-complete.cancel"></span></button>
+                <button type="button" class="btn-close" (click)="emailSent = false"><span class="sr-only" translate="reservation-page-complete.cancel"></span></button>
                 <strong translate="email.ticket-email-sent"></strong>
               </div>
             </div>
