--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -9,7 +9,7 @@
       <ng-select *ngSwitchCase="'country'" [attr.id]="ticketUUID + '-' + field.name" formControlName="0" appInvalidFeedback [items]="countries" bindLabel="name" bindValue="isoCode" [inputAttrs]="{autocomplete: 'nope'}">
         <ng-template ng-notfound-tmp let-searchTerm="searchTerm"></ng-template>
       </ng-select>
-      <select *ngSwitchCase="'select'" [attr.id]="ticketUUID + '-' + field.name" class="custom-select" formControlName="0" appInvalidFeedback>
+      <select *ngSwitchCase="'select'" [attr.id]="ticketUUID + '-' + field.name" class="form-select" formControlName="0" appInvalidFeedback>
           <option value=""></option>
           <option *ngFor="let c of field.restrictedValues" [ngValue]="c">{{getRestrictedValueLabel(c)}}</option>
       </select>
