--- a/src/app/reservation/invoice-form/invoice-form.component.html
+++ b/src/app/reservation/invoice-form/invoice-form.component.html
@@ -130,7 +130,7 @@
       <div class="col-12 col-md-6">
         <div class="form-group">
           <label for="italyEInvoicingReferenceType">{{'invoice-fields.addresseeItalyEInvoice' | translate}}{{' *'}}</label>
-          <select class="custom-select" id="italyEInvoicingReferenceType" required aria-required="true" formControlName="italyEInvoicingReferenceType">
+          <select class="form-select" id="italyEInvoicingReferenceType" required aria-required="true" formControlName="italyEInvoicingReferenceType">
             <option value="ADDRESSEE_CODE" translate="invoice-fields.addressee-code"></option>
             <option value="PEC" translate="invoice-fields.pec"></option>
             <option value="NONE" translate="invoice.fields.neither"></option>
