--- a/src/app/ticket-quantity-selector/ticket-quantity-selector.html
+++ b/src/app/ticket-quantity-selector/ticket-quantity-selector.html
@@ -1,7 +1,7 @@
 <div [formGroup]="parentGroup">
   <ng-container *ngIf="category.saleableAndLimitNotReached">
     <label class="sr-only" [for]="'category-'+category.id+'-qty'" translate="show-event.category.quantity"></label>
-    <select [id]="'category-'+category.id+'-qty'" formControlName="amount" class="custom-select" (change)="selectionChanged()">
+    <select [id]="'category-'+category.id+'-qty'" formControlName="amount" class="form-select" (change)="selectionChanged()">
       <option *ngFor="let qty of quantityRange" [ngValue]="qty">{{qty}}</option>
     </select>
   </ng-container>
