fix broken 50% column handling + add label classes #96

--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -1,6 +1,6 @@
 <div [formGroup]="form">
   <div class="form-group" [formArrayName]="field.name">
-    <label [attr.for]="ticketUUID + '-' + field.name" [id]="labelId" [attr.aria-hidden]="hideLabelForAssistiveTechnologies">{{labelValue + (field.required ? ' *' : '')}}</label>
+    <label class="form-label" [attr.for]="ticketUUID + '-' + field.name" [id]="labelId" [attr.aria-hidden]="hideLabelForAssistiveTechnologies">{{labelValue + (field.required ? ' *' : '')}}</label>
     <ng-container [ngSwitch]="field.type" *ngIf="editAllowed">
       <input *ngSwitchCase="'input:text'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
       <input *ngSwitchCase="'input:tel'" [attr.id]="ticketUUID + '-' + field.name" type="tel" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
