--- a/src/app/poll/poll-selection/poll-selection.component.html
+++ b/src/app/poll/poll-selection/poll-selection.component.html
@@ -4,7 +4,7 @@
         <div class="row mt-3">
             <div class="col-12">
                 <div class="form-group">
-                    <label for="pin" translate="poll.enter-your-pin"></label>
+                    <label class="form-label" for="pin" translate="poll.enter-your-pin"></label>
                     <input id="pin" formControlName="pin" class="form-control" appInvalidFeedback>
                 </div>
             </div>
