--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -62,7 +62,7 @@
       </div>
 
       <div *ngIf="displaySubscriptionForm" class="mt-2">
-        <div class="form-row">
+        <div class="row">
           <div class="col-12 col-md-6">
             <div class="form-group" [formGroup]="subscriptionCodeForm">
               <label for="subscription-input-code" class="sr-only">{{'reservation-page.overview.insert-subscription-code' | translate }}</label>
