--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -23,13 +23,13 @@
     <div class="row">
       <div class="col-12 col-sm-6">
         <div class="form-group">
-          <label for="first-name">{{'common.first-name'|translate}}{{' '}}*</label>
+          <label class="form-label" for="first-name">{{'common.first-name'|translate}}{{' '}}*</label>
           <input id="first-name" class="form-control" formControlName="firstName" aria-required="true" type="text" #contactFirstName autocomplete="fname" [attr.maxlength]="255" appInvalidFeedback (change)="handleAutocomplete('firstName', contactFirstName.value)">
         </div>
       </div>
       <div class="col-12 col-sm-6">
         <div class="form-group">
-          <label for="last-name">{{'common.last-name'|translate}}{{' '}}*</label>
+          <label class="form-label" for="last-name">{{'common.last-name'|translate}}{{' '}}*</label>
           <input id="last-name" class="form-control" formControlName="lastName" aria-required="true" type="text" #contactLastName autocomplete="lname" [attr.maxlength]="255" appInvalidFeedback (change)="handleAutocomplete('lastName', contactLastName.value)">
         </div>
       </div>
@@ -37,7 +37,7 @@
     <div class="row">
       <div class="col-12">
         <div class="form-group">
-            <label for="email">{{'common.email'|translate}}{{' '}}*</label>
+            <label class="form-label" for="email">{{'common.email'|translate}}{{' '}}*</label>
             <input id="email" class="form-control" formControlName="email" aria-required="true" type="email" #contactLastEmail autocomplete="email" [attr.maxlength]="255" appInvalidFeedback (change)="handleAutocomplete('email', contactLastEmail.value)">
         </div>
       </div>
@@ -100,23 +100,23 @@
         <label class="custom-control-label" for="show-subscription-owner">{{' '}}{{'reservation-page.subscription.different-owner' | translate}}</label>
       </div>
       <div *ngIf="contactAndTicketsForm.value.differentSubscriptionOwner" [formGroup]="getSubscriptionForm()">
-        <div class="form-row">
+        <div class="row">
           <div class="col-12 col-md-6">
             <div class="form-group">
-              <label for="subscription-first-name">{{'common.first-name' | translate}} *</label>
+              <label class="form-label" for="subscription-first-name">{{'common.first-name' | translate}} *</label>
               <input id="subscription-first-name" class="form-control" formControlName="firstName" type="text" appInvalidFeedback>
             </div>
           </div>
           <div class="col-12 col-md-6">
             <div class="form-group">
-              <label for="subscription-last-name">{{'common.last-name' | translate}} *</label>
+              <label class="form-label" for="subscription-last-name">{{'common.last-name' | translate}} *</label>
               <input class="form-control" id="subscription-last-name" formControlName="lastName" type="text" appInvalidFeedback>
             </div>
           </div>
         </div>
 
         <div class="form-group">
-          <label for="subscription-email">{{'common.email' | translate}} *</label>
+          <label class="form-label" class="form-label" for="subscription-email">{{'common.email' | translate}} *</label>
           <input id="subscription-email" formControlName="email" type="email" class="form-control" appInvalidFeedback>
         </div>
       </div>
